[package]
name = "sane_csv_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sane_csv_json"
path = "src/bin.rs"

[lib]
name = "sane_csv_json_lib"
path = "src/lib/lib.rs"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"]}
clap = { version = "3", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.9"
